--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,18 +8,34 @@
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "storybook:dev": "storybook dev -p 6006",
+    "storybook:build": "storybook build",
+    "storybook:test": "vitest run --project storybook"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@storybook/addon-a11y": "^10.1.5",
+    "@storybook/addon-docs": "^10.1.5",
+    "@storybook/addon-onboarding": "^10.1.5",
+    "@storybook/addon-vitest": "^10.1.5",
+    "@storybook/react-vite": "^10.1.5",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15",
     "eslint": "^9.39.1",
-    "typescript": "5.9.2"
+    "eslint-plugin-storybook": "^10.1.5",
+    "playwright": "^1.57.0",
+    "storybook": "^10.1.5",
+    "typescript": "5.9.2",
+    "vitest": "^4.0.15"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
