--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,8 @@
     "check-types": "tsc --noEmit",
     "storybook:dev": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "storybook:test": "vitest run --project storybook"
+    "storybook:test": "vitest run --project storybook",
+    "chromatic": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.3",
@@ -32,6 +33,7 @@
     "@types/react-dom": "19.2.2",
     "@vitest/browser-playwright": "^4.0.15",
     "@vitest/coverage-v8": "^4.0.15",
+    "chromatic": "^13.3.4",
     "eslint": "^9.39.1",
     "eslint-plugin-storybook": "^10.1.10",
     "playwright": "^1.57.0",
